<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherApp</string>
    <string name="api_key">AIzaSyA0RfKLOdoWxGhMMbo5ulPxI_UQ7efQO1U</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="searchByCity">поиск по городу</string>
    <string name="searchByCoordinates">поиск по координатам</string>
    <string name="searchByMap">поиск по карте</string>
    <string name="changeCity">выбрать город</string>
    <string name="reset">обновить</string>
    <string name="forecast">прогноз</string>
    <string name="writeCrd">координаты (шир. и долг.) </string>
    <string name="London">Minsk</string>
    <string name="latSample">46.99</string>
    <string name="lonSample">32</string>
    <string name="temperatureDN"> температура днем/ночью</string>
    <string name="description">описание</string>
    <string name="enterYourCityHere">введите свой город</string>
    <string name="temperature">температура:</string>
    <string name="temperatureCUnit">°C</string>
    <string name="humidity">влажность:</string>
    <string name="percent">%</string>
    <string name="pressure">давление:</string>
    <string name="pressureUnit">кПа</string>
    <string name="wind">ветер:</string>
    <string name="speedUnit">м/с</string>
    <string name="clouds">облачность:</string>
    <string name="N">северный</string>
    <string name="NE">северо-восточный</string>
    <string name="E">восточный</string>
    <string name="SE">юго-восточный</string>
    <string name="S">южный</string>
    <string name="SW">юго-западный</string>
    <string name="W">западный</string>
    <string name="NW">северо-западный</string>
    <string name="d200"> небольшой дождь с горозой</string>
    <string name="d201"> дождь с горозой</string>
    <string name="d202"> проливной дождь с горозой</string>
    <string name="d210"> небольшая гороза</string>
    <string name="d211"> гороза</string>
    <string name="d212"> сильная гороза</string>
    <string name="d221"> местами гроза</string>
    <string name="d230"> небольшая морось с грозой</string>
    <string name="d231"> морось с грозой</string>
    <string name="d232"> сильная морось с грозой</string>
    <string name="d300"> небольшая морось</string>
    <string name="d301"> морось</string>
    <string name="d302"> сильная морось</string>
    <string name="d310"> небольшая морось с дождем</string>
    <string name="d311"> морось с дождем</string>
    <string name="d312"> сильная морось с дождем</string>
    <string name="d313"> ливень с моросью</string>
    <string name="d314"> сильный ливень с моросью</string>
    <string name="d321"> морось переходящая в дождь</string>
    <string name="d500"> небольшой дождь</string>
    <string name="d501"> умеренный дождь</string>
    <string name="d502"> сильный дождь</string>
    <string name="d503"> очень сильный дождь</string>
    <string name="d504"> экстремальный дождь</string>
    <string name="d511"> ледяной дождь </string>
    <string name="d520"> небольшой ливень</string>
    <string name="d521"> ливень</string>
    <string name="d522"> сильный ливень</string>
    <string name="d531"> местами ливень</string>
    <string name="d600"> небольшой снег</string>
    <string name="d601"> снег</string>
    <string name="d602"> сильный снег</string>
    <string name="d611"> мокрый снег</string>
    <string name="d612"> сильный мокрый снег</string>
    <string name="d615"> небольшой дождь со снегом</string>
    <string name="d616"> снег с дождем</string>
    <string name="d620"> небольшой снегопад</string>
    <string name="d621"> снегопад</string>
    <string name="d622"> сильный снегопад</string>
    <string name="d701"> легкий туман</string>
    <string name="d711"> сильный туман</string>
    <string name="d721"> дымка</string>
    <string name="d731"> песок/пыльный ветер</string>
    <string name="d741"> туман</string>
    <string name="d751"> песок</string>
    <string name="d761"> пыль</string>
    <string name="d762"> ВУЛКАНИЧЕСКИЙ ПЕПЕЛ</string>
    <string name="d771"> ШКВАЛЬНЫЙ ВЕТЕР</string>
    <string name="d781"> ТОРНАДО</string>
    <string name="d800"> чистое небо</string>
    <string name="d801"> несколько облаков</string>
    <string name="d802"> небольшая облачность</string>
    <string name="d803"> переменная облачнасть</string>
    <string name="d804"> пасмурно</string>
    <string name="d900"> ТОРНАДО</string>
    <string name="d901"> ТРОПИЧЕСКИЙ ШТОРМ</string>
    <string name="d902"> УРАГАН</string>
    <string name="d903"> МОРОЗ</string>
    <string name="d904"> ЖАРА</string>
    <string name="d905"> ВЕТРЕННО</string>
    <string name="d906"> ГРАД</string>
    <string name="d950"> переменный ветер</string>
    <string name="d951"> штиль</string>
    <string name="d952"> легкий бриз</string>
    <string name="d953"> слабый бриз</string>
    <string name="d954"> бриз</string>
    <string name="d955"> свежий бриз</string>
    <string name="d956"> сильный бриз</string>
    <string name="d957"> сильный ветер близкий к шторму</string>
    <string name="d958"> буря</string>
    <string name="d959"> сильная буря</string>
    <string name="d960"> шторм</string>
    <string name="d961"> сильный шторм</string>
    <string name="d962"> ураган</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="latitude">широта</string>
    <string name="longitude">долгота</string>
    <string name="mediumText">Medium Text</string>
    <string name="largeText">Large Text</string>
    <string name="button">Button</string>
    <string name="morning">утро</string>
    <string name="day">день</string>
    <string name="eve">вечер</string>
    <string name="night">ночь</string>
    <string name="textView">TextView</string>
    <string name="chooseCity">выбрать город</string>
    <string name="updateData">обновить данные</string>

</resources>
