<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:text="@string/button"
            android:visibility="invisible"/>
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7">
            <TextView
                    android:id="@+id/morning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/morning"/>

            <TextView
                    android:id="@+id/day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/day"/>

            <TextView
                    android:id="@+id/evening"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/eve"/>

            <TextView
                    android:id="@+id/night"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/night"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7">
            <TextView
                    android:id="@+id/ELtvMornTemperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/largeText"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/ELtvDayTemperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/largeText"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/ELtvEveTemperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/largeText"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/ELtvNightTemperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/largeText"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
        <TextView
                android:id="@+id/ELtvWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>

        <TextView
                android:id="@+id/ELtvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>

        <TextView
                android:id="@+id/ELtvPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
    </LinearLayout>

</LinearLayout>